Add option to build uberjar